# spatial-scKNIFE

./: H_matrix.npy  W_matrix.npy  heatmap.py  matrix_data.py  requirements.txt  scKNIFE  scKNIFE.py
scKNIFE_graph/: .gitignore  GRAPH.md  pyproject.toml  pyrightconfig.json  requirements.txt
scKNIFE_graph/data/processed/: Rg_matrix.npz  complete_NM.json  laplacian.npz  layout.npy  sample_adjMatrix.txt
scKNIFE_graph/data/raw/: MANIFEST.json
scKNIFE_graph/data/separated/: cellchat_NM.json  cytopus_NM.json  go_NM.json  hgnc_map.json  human_gem_NM.json  markers_NM.json  metabolic_tasks_NM.json  msigdb_NM.json  reactome_NM.json  tabula_NM.json  trrust_NM.json
scKNIFE_graph/src/: acquire.py  config.py
scKNIFE_graph/src/etl/: go.py  human_gem.py  utils.py
scKNIFE_graph/src/scKNIFE_graph/: __main__.py  acquire.py  config.py  graph.py  matrix.py  merge.py
scKNIFE_graph/src/scKNIFE_graph.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scKNIFE_graph/src/scKNIFE_graph/etl/: cellchat.py  cytopus.py  go.py  hgnc.py  human_gem.py  markers.py  metabolic_tasks.py  msigdb.py  reactome.py  tabula.py  trrust.py  utils.py
