[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scKNIFE_graph"
version = "0.1.0"
description = "graph constructor for scKNIFE"
readme = "GRAPH.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
